@@ -692,3 +692,4 @@ table.insert(tests, "netsync_hook_errcodes")
 table.insert(tests, "automate_stdio_options")
 table.insert(tests, "spawn_redirected_hook_helper")
 table.insert(tests, "import")
+table.insert(tests, "netsync_permissions_wildcards")
